# sPop2

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  config.h  libtool  prepare.sh
docs/examples/: README.md  ex1_simple.c  ex2_compare.c  example_acc1_simple.c  example_acc2_compare.c
docs/examples/ex1_simple/: README.md  ex1_simple.c
docs/examples/ex2_compare/: README.md  ex2_compare.c
docs/examples/ex3_SEIR/: README.md  ex3_SEIR  ex3_SEIR.c
docs/examples/ex3_custom/: README.md  den  ex3_custom  ex3_custom.c
docs/examples/ex3_life_cycle/: README.md  den  den2  ex3_life_cycle  ex3_life_cycle.c
docs/examples/ex4_SEIR/: README.md  den  ex4_SEIR  ex4_SEIR.c  out.csv  out2.csv
docs/examples/ex4_SIR/: README.md  den  ex4_SIR
docs/examples/ex4_life_cycle/: README.md  den  den2  ex4_life_cycle  ex4_life_cycle.c  ex4_life_cycle_spop.c
docs/examples/ex5_life_cycle/: README.md  ex5_life_cycle.c
examples/: example_acc1_simple.c
src/lib/: Makefile.am  accp.c  accp.h  accp.lo  gamma.c  libspop2.la  libspop2py.la  qnta.c  qnta.h  qnta.lo  ran_gen.c  ran_gen.h  ran_gen.lo  spop2.c  spop2.h  spop2.lo  spoplib.c  spoplib.lo
src/lib/.deps/: ran_gen.Po
src/lib/.libs/: libspop2.0.dylib  libspop2.dylib  libspop2.la  libspop2.lai  libspop2py.la  libspop2py.lai
src/lib/.libs/libspop2.0.dylib.dSYM/Contents/: Info.plist
src/lib/.libs/libspop2.0.dylib.dSYM/Contents/Resources/DWARF/: libspop2.0.dylib
src/lib/.libs/libspop2.so.dSYM/Contents/: Info.plist
src/lib/.libs/libspop2py.so.dSYM/Contents/: Info.plist
